...
private const val PROFILE = "_profile"
private const val LIST = "_list"

// Private object containing UI actions
private object A {
  const val NEW = "new"
  const val EDIT = "edit"
  const val DELETE = "delete"
  const val CONFIRM = "confirm"
  const val CANCEL = "cancel"
  const val NEXT = "next"
  const val BACK = "back"
}

// Private object containing UI component types
...
object C {
  object Tag {
    // Screen and components containers
    const val main_screen_container = "main" + UI_T.SCREEN_CONTAINER
    const val sign_in_screen_container = S.AUTH + UI_T.SCREEN_CONTAINER
    const val new_user_screen_container = S.NEW_USER + UI_T.SCREEN_CONTAINER
    const val user_profile_screen_container = S.USER_PROFILE + UI_T.SCREEN_CONTAINER
    const val other_user_profile_screen_container = S.OTHERS_USER_PROFILE + UI_T.SCREEN_CONTAINER
    const val edit_profile_screen_container = S.EDIT_PROFILE + UI_T.SCREEN_CONTAINER
    const val map_screen_container = S.MAP + UI_T.SCREEN_CONTAINER
    const val map_filters_screen_container = S.MAP_FILTER + UI_T.SCREEN_CONTAINER
    const val new_book_choice_screen_container = S.NEW_BOOK + "_choice" + UI_T.SCREEN_CONTAINER
    const val new_book_isbn_screen_container = S.NEW_BOOK + "_isbn" + UI_T.SCREEN_CONTAINER
    const val new_book_manual_screen_container = S.NEW_BOOK + "_manual" + UI_T.SCREEN_CONTAINER
    const val new_book_scan_screen_container = S.NEW_BOOK + "_scan" + UI_T.SCREEN_CONTAINER
    const val edit_book_screen_container = S.EDIT_BOOK + UI_T.SCREEN_CONTAINER
    const val book_profile_screen_container = S.BOOK_PROFILE + UI_T.SCREEN_CONTAINER
    const val chat_list_screen_container = S.CHAT_LIST + UI_T.SCREEN_CONTAINER
    const val chat_screen_container = S.CHAT + UI_T.SCREEN_CONTAINER
    const val bottom_navigation_menu_container = "bottom_navigation_menu" + UI_T.CONTAINER
    const val top_app_bar_container = "top_app_bar" + UI_T.CONTAINER

    // TopAppBar specific tags (TopAppBarComponent.kt)
    object TopAppBar {
      const val back_button = A.BACK + UI_T.ICON_BUTTON
      const val back_icon = A.BACK + UI_T.ICON
      const val screen_title = "screen_title"
      const val profile_button = S.USER_PROFILE + UI_T.ICON_BUTTON
      const val profile_icon = S.USER_PROFILE + UI_T.ICON
    }

    // BottomNavigationMenu specific tags (BottomNavigationMenu.kt)
    object BottomNavMenu {
      const val nav_icon = "_nav" + UI_T.ICON
      const val nav_item = "_nav" + UI_T.ICON_BUTTON
...
      const val label = UI_T.LABEL
      const val text = UI_T.TEXT
    }

    // BookListComponent specific tags (BookListComponent.kt)
    object BookListComp {
      const val book_list_container = BOOK + LIST + UI_T.SCROLLABLE_CONTAINER
      const val empty_list_text = "empty" + LIST + UI_T.TEXT
      const val divider = BOOK + LIST + UI_T.DIVIDER
    }

    object BookEntryComp {
      // Parent container
...
      const val filled_star = "filled_star" + UI_T.ICON
      const val hollow_star = "hollow_star" + UI_T.ICON
    }

    // User Profile Screen specific tags (UserProfile.kt)
    object UserProfile {
      const val fullname = "fullname" + UI_T.TEXT
      const val email = "email" + UI_T.TEXT
      const val phone = "phoneNumber" + UI_T.TEXT
      const val address = "address" + UI_T.TEXT
      const val edit = S.EDIT_PROFILE + UI_T.BUTTON
      const val profileImage = "profile" + UI_T.IMAGE
      const val take_photo = A.NEW + UI_T.IMAGE + UI_T.BUTTON
      const val profileImageBox = "profile_image_box" + UI_T.CONTAINER
    }

...
      const val profile_image_icon = S.OTHERS_USER_PROFILE + "_picture" + UI_T.ICON
      const val chatButton = "chatButton"
    }

    // Edit User Profile Screen specific tags (EditProfile.kt)
    object EditProfile {
      const val greeting = "greeting" + UI_T.TEXT_FIELD
      const val firstname = "firstname" + UI_T.TEXT_FIELD
      const val lastname = "lastname" + UI_T.TEXT_FIELD
      const val email = "email" + UI_T.TEXT_FIELD
      const val phone = "phone" + UI_T.TEXT_FIELD
      const val confirm = A.CONFIRM + UI_T.BUTTON
      const val dismiss = A.CANCEL + UI_T.BUTTON
    }

    // Book Profile Screen specific tags (BookProfile.kt)
    object BookProfile {
      const val scrollable = Screen.BOOK_PROFILE + UI_T.SCROLLABLE_CONTAINER
      const val title = BOOK + "_title" + UI_T.TEXT
...
